--- a/app/src/main/res/drawable/bg_home_gradient.xml
+++ b/app/src/main/res/drawable/bg_home_gradient.xml
@@ -1,5 +1,7 @@
 <?xml version="1.0" encoding="utf-8"?>
-<gradient xmlns:android="http://schemas.android.com/apk/res/android"
-    android:startColor="#FFF3E0"
-    android:endColor="#FFE0B2"
-    android:angle="90"/>
+<shape xmlns:android="http://schemas.android.com/apk/res/android">
+    <gradient
+        android:startColor="#FFF3E0"
+        android:endColor="#FFE0B2"
+        android:angle="90"/>
+</shape>
