--- a/app/src/main/res/drawable/bg_login_gradient.xml
+++ b/app/src/main/res/drawable/bg_login_gradient.xml
@@ -1,5 +1,7 @@
 <?xml version="1.0" encoding="utf-8"?>
-<gradient xmlns:android="http://schemas.android.com/apk/res/android"
-    android:startColor="#C62828"
-    android:endColor="#F57C00"
-    android:angle="90"/>
+<shape xmlns:android="http://schemas.android.com/apk/res/android">
+    <gradient
+        android:startColor="#C62828"
+        android:endColor="#F57C00"
+        android:angle="90"/>
+</shape>
