--- a/app/src/main/res/drawable/bg_splash_gradient.xml
+++ b/app/src/main/res/drawable/bg_splash_gradient.xml
@@ -1,6 +1,8 @@
 <?xml version="1.0" encoding="utf-8"?>
-<gradient xmlns:android="http://schemas.android.com/apk/res/android"
-    android:startColor="#FFFDE7"
-    android:centerColor="#FFE0B2"
-    android:endColor="#FFCDD2"
-    android:angle="90"/>
+<shape xmlns:android="http://schemas.android.com/apk/res/android">
+    <gradient
+        android:startColor="#FFFDE7"
+        android:centerColor="#FFE0B2"
+        android:endColor="#FFCDD2"
+        android:angle="90"/>
+</shape>
